--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,22 @@
-asgiref==3.6.0
-Django==4.2
-django-debug-toolbar==4.0.0
+asgiref==3.5.2
+attrs==23.1.0
+certifi==2023.5.7
+Django==4.1.6
+django-debug-toolbar==4.1.0
 django-filter==22.1
+django-jsgettext==0.5
 djangorestframework==3.14.0
+drf-spectacular==0.26.3
+gunicorn==21.2.0
+homebrew==0.2.5
+inflection==0.5.1
+jsonschema==4.17.3
+packaging==23.1
 Pillow==9.4.0
+pyrsistent==0.19.3
 pytz==2022.7.1
+PyYAML==6.0
+sentry-sdk==1.28.0
 sqlparse==0.4.2
+uritemplate==4.1.1
+urllib3==2.0.3
