--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,8 @@
-version: '2.4'
+version: '2.2'
 services:
   app:
     build:
+      context: .
       dockerfile: ./Dockerfile
     command:
       - gunicorn
